* Added an 'encoding' parameter to bld.subst()
* Detect Visual Studio 2011 beta
* Detect cython dependencies of the form "from module import x" #1044
* Use the cython includes in the dependency scanner #1166
* Improved the behaviour of Utils.readf/Utils.writef on Win32
* Made Task.__repr__ more robust #1174
* Fixed the gcc builds on hp-ux

NEW IN WAF 1.6.11
-----------------
* Enable custom variables for the boost detection #1089
* Disable the config test execution when detecting boost #1090
* Process moc classes in .cpp files by default #1095
* Apply the chmod attribute to the versioned libraries (vnum) #1097
* Fixed the python detection on OSX #1098
* Changed the win32 color settings for Windows 7 #1099
* Set the default fortran linker for ifort to xiar #1104

NEW IN WAF 1.6.10
-----------------
* Fixed the 'remove' attribute propagation in ant_glob #1086
* Fixed the behavior of recurse(name=xyz) when looking in existing folders
* Fixed a problem with include paths in the relocation tool #1078
* Improved the pgicc compiler detection #1080
* Fixed the behavior of 'waf options' #1076
* Process larger java projects #1074
* Remove the ':' from the drives when dealing with foreign files and folders on Win32
* Let the 'subst' feature process a chmod attribute
* Added a hook for distutils variable query #1083

NEW IN WAF 1.6.9
----------------
* Fixed the duplicate moc file creation in slow_qt4 #1047
* Fixed the Visual Studio 2008 projects creation #1033
* Added a workaround to avoid creating include folders not under the build directory #1049
* Added a default virtual folder structure for out-of-tree build files #1053
* Added a way to set variants containing /, for example linux/debug
* Added a more intuitive behaviour for conf.setenv() #1062
* Fixed the multiple bibliography processing for tex #1040
* Windows CE detection improvements #1065
* Fixed the library installation on OSX
* Fixed the Powerpc/IPhone platform detection
* Added an Xcode project generator
